8/22/11 change request: redesign Bond Type indicator, move labels inside track, dual pointers above/below track [55629]
8/22/11 shorten max length of bond dipoles, so that vector tails don't run together for linear triatomic molecule
8/22/11 document our simplified relationship between deltaEN, bond dipole and partial charge
8/22/11 remove "more" from range labels on Bond Type indicator
8/22/11 use 31 colors for rainbow gradient, as shown for "Jmol roygb" at http://jmol.sourceforge.net/jscolors/#gradnt
8/22/11 remove surface features from "Three Atoms" tab, since we're creating molecules that are impossible to create surfaces for
8/22/11 use neutral green as documented for Jmol roygb gradient at http://jmol.sourceforge.net/jscolors/#gradnt
8/22/11 remove arrows from continuum titles
8/22/11 Jmol: make atom labels be hidden by things in front of them
8/22/11 change request: change EN range to 2.0-4.0
# 0.00.15 (55611) Aug 22, 2011
8/22/11 dev version for discussion with KL
8/22/11 change request: try no color change on the E-field plates when turned on, because color is sending wrong messages
8/22/11 Jmol weights blue for 20% of the rainbow gradient, so add more blue to the color key
8/22/11 add dipole scaling factor to view, currently set to 1.0
8/22/11 delete JComboBox-based molecule control, stick with Piccolo version
8/22/11 create color constants in MPColors for things that are in flux
8/22/11 tone down color of Reset All button, bright yellow was a little to eye-grabbing
8/22/11 change format (<- title ->) and location (bottom) of titles to reclaim some vertical space [55595]
8/21/11 add title to Bond Type indicator, flip arrow to point up for now, use lowercase for range labels to be consistent
8/21/11 add cyan to rainbow mep color key, trying to match Jmol's color scheme
8/21/11 restore titles with smaller non-bold font
# 0.00.14 (55578) Aug 21, 2011
8/21/11 change request: remove titles from electronegativity table and color keys